* Added and implemented command grouping

* Improved help command

* Improved mute commands

* Improved configs

* Combined 'muteinfo' and 'mutelist' commands to mute command

* Improved mute systems

* Added member update event

* Added and implemented mute logs channel

* Added and implemented a function to log mute activities

* Any mute activities now should be logged to the mute logs channel

* Mute system (including commands) are complete

12/23/2019 (UTC+7)